confusegroups, fix images not resizing on mobile

--- a/confusegroups/card1.css
+++ b/confusegroups/card1.css
@@ -11,7 +11,7 @@
   text-align: left;;
 }
 
-img {
+img, .mobile img {
 	max-height: 2em;
 }
 
